<resources>
    <string name="app_name">Assignment</string>
    <!--Point 3-->
    <string name="txt_1">TextView 1</string>
    <string name="txt_2">TextView 2</string>
    <string name="txt_3">TextView 3</string>
    <!--Point 4-->
    <string name="click_an_item">Click any of the items in Point 1</string>
    <!--Point 5-->
    <string name="button_red">Red</string>
    <string name="button_blue">Blue</string>
    <string name="button_green">Green</string>
    <!--scenario 2-->
    <string name="spinner_title">Select Category</string>
    <string name="mode">Methods of transport:</string>
    <string name="txt_by_car">Car - </string>
    <string name="txt_by_train">Train - </string>
    <string name="navigate">Navigate</string>
    <!--for internet-->
    <string name="internet">You seem to be offline.Please check your internet connection.</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
</resources>
