<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:foo="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/layout_status"
        layout="@layout/activity_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:prompt="@string/spinner_title" />

        <com.assignment.custom_components.TextViewPlus
            style="@style/sliding_menu_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="left"
            android:text="@string/mode"
            foo:customFont="arial.ttf" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.assignment.custom_components.TextViewPlus
                android:id="@+id/txt_by_car"
                style="@style/sliding_menu_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/txt_by_car"
                foo:customFont="arial.ttf" />

            <com.assignment.custom_components.TextViewPlus
                android:id="@+id/txt_by_car_val"
                style="@style/sliding_menu_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                foo:customFont="arial.ttf" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.assignment.custom_components.TextViewPlus
                android:id="@+id/txt_by_train"
                style="@style/sliding_menu_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/txt_by_train"
                foo:customFont="arial.ttf" />

            <com.assignment.custom_components.TextViewPlus
                android:id="@+id/txt_by_train_val"
                style="@style/sliding_menu_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                foo:customFont="arial.ttf" />
        </LinearLayout>

        <com.assignment.custom_components.ButtonWithFont
            android:id="@+id/btn_navigate"
            style="@style/ButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="10dp"
            android:text="@string/navigate"
            foo:customFont="arial.ttf" />
    </LinearLayout>

</LinearLayout>