<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:foo="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp">

    <include
        android:id="@+id/layout_status"
        layout="@layout/activity_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/layout_status">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_point_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:overScrollMode="never" />

            <View
                android:id="@+id/divider_1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:background="@color/drawer_divider_color" />

            <com.assignment.custom_components.CustomViewPager
                android:id="@+id/view_pager"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:overScrollMode="never" />

            <LinearLayout
                android:id="@+id/introViewPagerIndicator"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_gravity="bottom"
                android:gravity="center">

                <LinearLayout
                    android:id="@+id/introViewPagerCountDots"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="4dp"
                    android:gravity="center"
                    android:orientation="horizontal" />
            </LinearLayout>

            <View
                android:id="@+id/divider_2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:background="@color/drawer_divider_color" />

            <com.assignment.custom_components.TextViewPlus
                android:id="@+id/txt_1"
                style="@style/sliding_menu_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/txt_1"
                foo:customFont="arial.ttf" />

            <com.assignment.custom_components.TextViewPlus
                android:id="@+id/txt_2"
                style="@style/sliding_menu_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/txt_2"
                foo:customFont="arial.ttf" />

            <com.assignment.custom_components.TextViewPlus
                android:id="@+id/txt_3"
                style="@style/sliding_menu_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/txt_3"
                foo:customFont="arial.ttf" />

            <View
                android:id="@+id/divider_3"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:background="@color/drawer_divider_color" />

            <com.assignment.custom_components.TextViewPlus
                android:id="@+id/txt_fragment_clicked"
                style="@style/sliding_menu_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/click_an_item"
                foo:customFont="arial.ttf" />

            <View
                android:id="@+id/divider_4"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:background="@color/drawer_divider_color" />

            <LinearLayout
                android:id="@+id/ll_buttons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5dp">

                <com.assignment.custom_components.ButtonWithFont
                    android:id="@+id/btn_red"
                    style="@style/ButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="5dp"
                    android:text="@string/button_red"
                    foo:customFont="arial.ttf" />

                <com.assignment.custom_components.ButtonWithFont
                    android:id="@+id/btn_blue"
                    style="@style/ButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="5dp"
                    android:text="@string/button_blue"
                    foo:customFont="arial.ttf" />

                <com.assignment.custom_components.ButtonWithFont
                    android:id="@+id/btn_green"
                    style="@style/ButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="5dp"
                    android:text="@string/button_green"
                    foo:customFont="arial.ttf" />
            </LinearLayout>

            <View
                android:id="@+id/divider_5"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:background="@color/drawer_divider_color" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
